--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <h1>DevelopFlix</h1>
-    <section class="genero-container">
-        <h2>Películas de Acción</h2>
-        <div id="genero-28" class="genero"></div>
-    </section>
-
-    <section class="genero-container">
-        <h2>Películas de Thriller</h2>
-        <div id="genero-53" class="genero"></div>
-    </section>
-
-    <section class="genero-container">
-        <h2>Películas de Aventura</h2>
-        <div id="genero-12" class="genero"></div>
-    </section>
+  <h1>DEVELOPFLIX</h1>
+  <section class="peliculas">
+      <section class="genero-container">
+          <h2>Películas de Acción</h2>
+          <div id="genero-28" class="genero"></div>
+      </section>
+  
+      <section class="genero-container">
+          <h2>Películas de Thriller</h2>
+          <div id="genero-53" class="genero"></div>
+      </section>
+  
+      <section class="genero-container">
+          <h2>Películas de Aventura</h2>
+          <div id="genero-12" class="genero"></div>
+      </section>
+      
+  </section>
 
     <script type="module" src="./js/script.js"></script>
 </body>
